--- a/src/index.html
+++ b/src/index.html
@@ -35,37 +35,122 @@
                     <ul
                         tabindex="0"
                         class="menu dropdown-content menu-sm z-[1] mt-3 w-52 rounded-box bg-base-100 p-2 shadow">
-                        <li><a>Item 1</a></li>
-                        <li>
-                            <a>Parent</a>
-                            <ul class="p-2">
-                                <li><a>Submenu 1</a></li>
-                                <li><a>Submenu 2</a></li>
-                            </ul>
-                        </li>
-                        <li><a>Item 3</a></li>
+                        <li href="#teacher"><a>Учитель</a></li>
+                        <li><a href="#schedule">Розклад</a></li>
                     </ul>
                 </div>
-                <a class="btn btn-ghost text-xl">daisyUI</a>
+                <a class="btn btn-ghost text-xl">Bhavya Yoga</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li><a>Item 1</a></li>
-                    <li>
-                        <details>
-                            <summary>Parent</summary>
-                            <ul class="p-2">
-                                <li><a>Submenu 1</a></li>
-                                <li><a>Submenu 2</a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li><a>Item 3</a></li>
+                    <li href="#teacher"><a>Учитель</a></li>
+                    <li><a href="#schedule">Расписание</a></li>
                 </ul>
             </div>
             <div class="navbar-end">
-                <a class="btn">Button</a>
+                <a class="btn">Записатися</a>
             </div>
         </div>
+
+        <div
+            class="hero min-h-screen"
+            style="background-image: url(./img/hero3.jpg)">
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md">
+                    <h1 class="mb-5 text-5xl font-bold">Йога від Садхґуру</h1>
+                    <p class="mb-5">
+                        Навчання практика класичної Хатха Йоги що прийшла з
+                        підніжжя священних індійських гір Велліангіріq в Україні
+                        та Америці.
+                    </p>
+                    <p class="mb-5">
+                        Сертифікований вчитель Хатха Йоги фонду «Іша».
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="hero min-h-screen bg-base-200">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+                <div>
+                    <h1 class="text-5xl font-bold">Учитель</h1>
+                    <p class="py-6">
+                        Засновник класичної школи Хатха йоги «Bhavya Yoga»,
+                        сертифікований вчитель Хатха йоги фонду «Іша».
+                    </p>
+                </div>
+                <div class="grid grid-cols-1 justify-items-center">
+                    <img
+                        src="./img/ava1.jpg"
+                        class="mask mask-squircle max-w-72 shadow-2xl" />
+                    <div class="py-6">Анжела Пелех</div>
+                </div>
+                <div>
+                    <p class="py-6">
+                        Більше двадцяти років вивчаю різні духовні традиції і
+                        практикую йогу. У 2014 році закінчила інтенсивний курс
+                        підготовки викладачів Іша-хатха-йоги в центрі йоги «Іша»
+                        (Індія), який включає в себе 1750 годин (пів року)
+                        навчання класичної хатха-йоги в її первозданному
+                        вигляді. Навчання продовжуються і зараз-Школа
+                        Іша-хатха-йоги регулярно проводить програми підвищення
+                        кваліфікації для своїх викладачів в Індії, Європі та
+                        США, підтримуючи їх і навчаючи новим практикам..
+                    </p>
+                    <p class="py-6">
+                        Уже кілька років я практикую і проводжу заняття в
+                        Америці, де я зараз живу зі своєю сім'єю. І мені завжди
+                        хотілося принести практики Іша-хатха-йоги в Україну.
+                        Чому? Найприродніше бажання, знайоме кожному з нас-це
+                        бажання ділитися успіхом, методикою, яка повернула
+                        здоров'я і легкість, перевіреним і ефективним способом
+                        зростання і відкриття нових горизонтів.
+                    </p>
+                    <button class="btn btn-primary">Get Started</button>
+                </div>
+            </div>
+        </div>
+
+        <footer
+            class="footer footer-center bg-primary p-10 text-primary-content">
+            <aside>
+                <p>Copyright © 2024 - All right reserved</p>
+            </aside>
+            <nav>
+                <div class="grid grid-flow-col gap-4">
+                    <a href=""
+                        ><svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            class="fill-current">
+                            <path
+                                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg
+                    ></a>
+                    <a href=""
+                        ><svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            class="fill-current">
+                            <path
+                                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg
+                    ></a>
+                    <a href=""
+                        ><svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            class="fill-current">
+                            <path
+                                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg
+                    ></a>
+                </div>
+            </nav>
+        </footer>
     </body>
 </html>
