--- a/src/index.html
+++ b/src/index.html
@@ -145,15 +145,100 @@
                         здоров'я і легкість, перевіреним і ефективним способом
                         зростання і відкриття нових горизонтів.
                     </p>
-                    <button class="btn btn-accent">Get Started</button>
                 </div>
             </div>
         </div>
 
-        <div class="hero min-h-screen bg-accent text-neutral-content" id="school">
+        <div class="min-h-screen bg-base-200">
+            <div class="text-center" id="programs">
+                <div class="inline-block">
+                    <div
+                        class="card image-full static inline-block w-96 bg-base-100 shadow-xl">
+                        <figure>
+                            <img
+                                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                                alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>
+                                If a dog chews shoes whose shoes does he choose?
+                            </p>
+                            <div class="card-actions justify-end">
+                                <button class="btn btn-primary">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="inline-block">
+                    <div
+                        class="card image-full inline-block w-96 bg-base-100 shadow-xl">
+                        <figure>
+                            <img
+                                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                                alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>
+                                If a dog chews shoes whose shoes does he choose?
+                            </p>
+                            <div class="card-actions justify-end">
+                                <button class="btn btn-primary">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="inline-block">
+                    <div
+                        class="card image-full inline-block w-96 bg-base-100 shadow-xl">
+                        <figure>
+                            <img
+                                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                                alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>
+                                If a dog chews shoes whose shoes does he choose?
+                            </p>
+                            <div class="card-actions justify-end">
+                                <button class="btn btn-primary">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="inline-block">
+                    <div
+                        class="card image-full inline-block w-96 bg-base-100 shadow-xl">
+                        <figure>
+                            <img
+                                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                                alt="Shoes" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>
+                                If a dog chews shoes whose shoes does he choose?
+                            </p>
+                            <div class="card-actions justify-end">
+                                <button class="btn btn-primary">Buy Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div
+            class="hero min-h-screen bg-accent text-neutral-content"
+            id="school">
             <div class="hero-content flex-col lg:flex-row-reverse">
                 <div>
-                    <h1 class="text-4xl pb-6 font-bold">Про школу Іша</h1>
+                    <h1 class="pb-6 text-4xl font-bold">Про школу Іша</h1>
 
                     <figure class="mx-auto max-w-screen-md text-center">
                         <svg
@@ -166,7 +251,7 @@
                                 d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
                         </svg>
                         <blockquote>
-                            <p class="text-xl font-medium italic ">
+                            <p class="text-xl font-medium italic">
                                 Слово «Йога» означає «Єдність». Коли ви в йозі,
                                 ви сприймаєте все як частину себе. Це і є
                                 абсолютна свобода.
@@ -176,22 +261,31 @@
                             class="mt-6 flex items-center justify-center space-x-3 rtl:space-x-reverse">
                             <div
                                 class="flex items-center divide-x-2 divide-gray-500 rtl:divide-x-reverse dark:divide-gray-700">
-                                <cite
-                                    class="pe-3 font-medium "
-                                    >Садхґуру</cite
-                                >
-                                <cite
-                                    class="ps-3 text-sm "
+                                <cite class="pe-3 font-medium">Садхґуру</cite>
+                                <cite class="ps-3 text-sm"
                                     >засновник Фонду Іша</cite
                                 >
                             </div>
                         </figcaption>
                     </figure>
-            </div>
+                </div>
                 <img
                     src="./img/sadhguru1.jpg"
                     class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
-                </div>
+            </div>
+        </div>
+
+        <div class="bg-accent text-neutral-content">
+            <div class="px-6">
+                <p class="merriweather py-6 text-xl">
+                    Школа іжа-хатха-йоги, заснована Садхгуру, покликана
+                    відродити давню, але не втрачає своєї актуальності науку
+                    хатха-йоги. Садхгуру підносить йогу-основу духовної сили
+                    Індії, що стала її подарунком світу, – як науку про
+                    внутрішній устрій людини. Програми Іша-хатха-йоги вже
+                    пройшли мільйони людей по всьому світу.
+                </p>
+            </div>
         </div>
 
         <footer
