--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ua" data-theme="retro">
+<html lang="en" data-theme="retro">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,6 +19,7 @@
       }
     </style>
   </head>
+
   <body>
     <div class="navbar bg-base-100">
       <div class="navbar-start">
@@ -40,22 +41,23 @@
           <ul
             tabindex="0"
             class="menu dropdown-content menu-sm z-[1] mt-3 w-52 rounded-box bg-base-100 p-2 shadow">
-            <li><a href="#teacher">Учитель</a></li>
-            <li><a href="#schedule">Розклад</a></li>
-            <li><a href="#school">Про школу</a></li>
+            <li><a href="#teacher">Teacher</a></li>
+            <li><a href="#schedule">Schedule</a></li>
+            <li><a href="#school">About School</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost text-xl">Bhavya Yoga</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-          <li><a href="#teacher">Учитель</a></li>
-          <li><a href="#schedule">Расписание</a></li>
-          <li><a href="#school">Про школу</a></li>
+          <li><a href="#teacher">Teacher</a></li>
+          <li><a href="#schedule">Schedule</a></li>
+          <li><a href="#school">About School</a></li>
         </ul>
       </div>
       <div class="navbar-end">
-        <a class="btn btn-accent">Записатися</a>
+        <a href="/ua" class="btn btn-outline btn-accent btn-sm mx-3">En</a>
+        <a class="btn btn-accent btn-sm">Apply</a>
       </div>
     </div>
 
@@ -63,147 +65,114 @@
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
-          <h1 class="mb-5 text-5xl font-bold text-accent">Йога від Садхґуру</h1>
+          <h1 class="mb-5 text-5xl font-bold text-accent">Classical Hatha Yoga</h1>
           <p class="mb-5">
-            Навчання практика класичної Хатха Йоги що прийшла з підніжжя священних індійських гір
-            Велліангіріq в Україні та Америці.
+            Classical Hatha Yoga designed by Sadhguru. We are based in United States and Ukraine.
           </p>
-          <p class="mb-5 text-neutral-content">Сертифікований вчитель Хатха Йоги фонду «Іша».</p>
+          <p class="mb-5 text-neutral-content">Certified Hatha Yoga Teacher by Isha Foundation.</p>
         </div>
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-base-200">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <div class="px-2">
-          <h1 class="text-5xl font-bold" id="teacher">Учитель</h1>
-          <p class="merriweather py-6 text-xl">
-            У 2016 році закінчила інтенсивний курс підготовки викладачів Іша-хатха-йоги в центрі
-            йоги «Іша» (Індія), який включає в себе 1750 годин (пів року) навчання класичної
-            хатха-йоги в її первозданному вигляді. Навчання продовжуються і зараз - Школа «Іша Хатха
-            Йоги» регулярно проводить програми підвищення кваліфікації для своїх викладачів в Індії,
-            Європі та США, підтримуючи їх і навчаючи новим практикам.
-          </p>
-        </div>
-        <div class="justify-items-center">
-          <img src="./img/ava1.avif" class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
-          <div class="py-1 text-center text-2xl text-accent">Анжела Пелех</div>
-          <div class="pb-6 text-center">
-            Засновник класичної школи Хатха йоги «Bhavya&nbsp;Yoga».
-          </div>
+    <div class="bg-base-200 px-6 py-12">
+      <h1 class="text-5xl font-bold" id="teacher">Teacher</h1>
+      <p class="merriweather py-6 text-xl">
+        Angela shares: "In 2016 I completed an intensive Hatha Yoga Teacher Training at the Isha
+        Yoga Center (India), which includes 1,750 hours (half a year) of classical hatha yoga
+        training in its original form.
+        <br />
+        Training continues even now – the Isha Hatha Yoga School regularly conducts advanced
+        training programs for its teachers in India, Europe and the United States, supporting them
+        and teaching them new practices."
+      </p>
+      <div class="justify-items-center py-6">
+        <img src="./img/ava1.avif" class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
+        <div class="py-1 text-center text-2xl text-accent">Angela Pelekh</div>
+        <div class="text-center">
+          Founder of the Classical Hatha Yoga school "Bhavya&nbsp;Yoga".
         </div>
       </div>
-    </div>
 
-    <div class="bg-base-200 px-6">
       <p class="merriweather py-6 text-base">
-        Я зі Львова. Але в 2003 з сім’єю виїхали в Америку і от в 2012 Садхгуру приізджав в Детройт
-        - попали на його програму... Ну і з цього все почалося...
-        <br />
-        Зараз стараюся приїжджати в Україну два рази в березні і на літо, щоб мати змогу передавати
-        практики.
+        I'm from Lviv. But in 2003, my family went to America, and in 2012, Sadhguru came to Detroit
+        and I came to his program... Well, that's where it all started... Now I come to Ukraine
+        twice in March and in the summer to be able to transfer these yogic practices.
+      </p>
 
-        <br />
-        <br />
-        Збудувала невеличку студію в 2018 році в Карпатах - там і проводяться ретріти і більшість
-        програм. Хоча це місце досить високо в горах .. але програми там проходять чудово (відчуття
-        наче невеличкий Ашрам в Україні). Маємо там Саннідхі , проводяться по понеділках процес
-        одним медитатором, який там проживає …
+      <div class="carousel carousel-center h-80 rounded-box">
+        <div class="carousel-item">
+          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1" />
+          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1" />
+          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1" />
+          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1" />
+        </div>
+      </div>
+      <p class="merriweather text-base">
+        In 2018 I built a small studio in the Carpathians, where retreats and most Ukranian programs
+        are held. Although this place is quite high in the mountains .. but the programs there are
+        great (it feels like a small ashram in Ukraine). We have Sannidhi there, and a process is
+        held on Mondays by one meditator who lives there.
       </p>
     </div>
 
-    <div class="hero min-h-screen bg-base-200">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <div>
-          <p class="py-6">.</p>
-          <p class="py-6">
-            Уже кілька років я практикую і проводжу заняття в Америці, де я зараз живу зі своєю
-            сім'єю. І мені завжди хотілося принести практики Іша-хатха-йоги в Україну. Чому?
-            Найприродніше бажання, знайоме кожному з нас-це бажання ділитися успіхом, методикою, яка
-            повернула здоров'я і легкість, перевіреним і ефективним способом зростання і відкриття
-            нових горизонтів.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="min-h-screen bg-base-200">
+    <div class="bg-base-100 px-6 py-12">
+      <h1 class="pb-6 text-5xl font-bold" id="schedule">Upcoming Programs</h1>
       <div class="text-center" id="programs">
         <div class="inline-block">
-          <div class="card image-full static inline-block w-96 bg-base-100 shadow-xl">
+          <div class="class-card card">
             <figure>
-              <img
-                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                alt="Shoes" />
+              <img src="/img/surya-kriya-card.avif" alt="Surya Kriya" />
             </figure>
-            <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+            <div class="card-body p-5">
+              <h2 class="card-title">Surya Kriya</h2>
+              <p>(2 sessions) March 2-3 10:00-13:00 UTC</p>
+              <p>
+                <b>$ 100</b>
+                ,- incl. online support
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-accent" onclick="modalApply.showModal()">Apply</button>
+                <button class="btn btn-outline btn-accent" onclick="modalSuryaKriya.showModal()">
+                  Learn More
+                </button>
               </div>
             </div>
           </div>
         </div>
 
         <div class="inline-block">
-          <div class="card image-full inline-block w-96 bg-base-100 shadow-xl">
+          <div class="class-card card">
             <figure>
-              <img
-                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                alt="Shoes" />
+              <img src="/img/surya-kriya-card.avif" alt="Surya Kriya" />
             </figure>
-            <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
-            </div>
+            <div class="card-body"></div>
           </div>
         </div>
 
         <div class="inline-block">
-          <div class="card image-full inline-block w-96 bg-base-100 shadow-xl">
+          <div class="class-card card">
             <figure>
-              <img
-                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                alt="Shoes" />
+              <img src="/img/surya-kriya-card.avif" alt="Surya Kriya" />
             </figure>
-            <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="inline-block">
-          <div class="card image-full inline-block w-96 bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                alt="Shoes" />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
-            </div>
+            <div class="card-body"></div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-accent text-neutral-content" id="school">
+    <div class="bg-accent px-6 pt-12 text-neutral-content">
+      <h1 class="pb-6 text-4xl font-bold">About Isha</h1>
+      <p class="merriweather py-6 text-xl">
+        The Isha Hatha yoga school, founded by Sadhguru, is designed to revive the ancient but still
+        relevant science of hatha yoga. The Isha Hatha yoga programs have been passed by millions of
+        people around the world, including India, Great Britain, Singapore, Australia, China,
+        Canada, United States and Ukraine.
+      </p>
+    </div>
+
+    <div class="hero bg-accent py-6 text-neutral-content" id="school">
       <div class="hero-content flex-col lg:flex-row-reverse">
         <div>
-          <h1 class="pb-6 text-4xl font-bold">Про школу Іша</h1>
-
           <figure class="mx-auto max-w-screen-md text-center">
             <svg
               class="mx-auto mb-3 h-10 w-10 text-gray-400 dark:text-gray-600"
@@ -216,15 +185,20 @@
             </svg>
             <blockquote>
               <p class="text-xl font-medium italic">
-                Слово «Йога» означає «Єдність». Коли ви в йозі, ви сприймаєте все як частину себе.
-                Це і є абсолютна свобода.
+                The word "Yoga" means union. When you are in yoga, you experience everything as a
+                part of yourself and that is ultimate freedom.
               </p>
             </blockquote>
             <figcaption class="mt-6 flex items-center justify-center space-x-3 rtl:space-x-reverse">
               <div
                 class="flex items-center divide-x-2 divide-gray-500 rtl:divide-x-reverse dark:divide-gray-700">
-                <cite class="pe-3 font-medium">Садхґуру</cite>
-                <cite class="ps-3 text-sm">засновник Фонду Іша</cite>
+                <cite class="pe-3 font-medium">Sadhguru</cite>
+                <cite class="ps-3 text-sm">
+                  founder of
+                  <a href="https://isha.sadhguru.org/" class="link" target="_blank">
+                    Isha foundation
+                  </a>
+                </cite>
               </div>
             </figcaption>
           </figure>
@@ -233,16 +207,65 @@
       </div>
     </div>
 
-    <div class="bg-accent text-neutral-content">
-      <div class="px-6">
-        <p class="merriweather py-6 text-xl">
-          Школа іжа-хатха-йоги, заснована Садхгуру, покликана відродити давню, але не втрачає своєї
-          актуальності науку хатха-йоги. Садхгуру підносить йогу-основу духовної сили Індії, що
-          стала її подарунком світу, – як науку про внутрішній устрій людини. Програми
-          Іша-хатха-йоги вже пройшли мільйони людей по всьому світу.
+    <!-- Open the modal using ID.showModal() method -->
+    <dialog id="modalApply" class="modal">
+      <div class="modal-box">
+        <h3 class="text-lg font-bold">Apply</h3>
+        <p class="py-4">
+          If you want to apply for a program please message Angela in Telegram:
+          <a href="https://t.me/angelapelekh" target="_blank" class="btn btn-accent btn-sm">
+            @AngelaPelekh
+          </a>
         </p>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
       </div>
-    </div>
+    </dialog>
+
+    <dialog id="modalSuryaKriya" class="modal text-primary-content">
+      <div class="prose modal-box">
+        <img class="rounded-box" src="/img/surya-kriya-modal.avif" alt="Surya Kriya" />
+        <h3>Surya Kriya (2 sessions x 3.5 hours)</h3>
+        <p>
+          <b>Surya Kriya</b>
+          — solar energy is the fundamental energy and that is so even within human body. Surya
+          Kriya is a powerful process of activating the sun within you. It generates sun energy
+          within the system and body begins to glow and shine. On a psychical level this process
+          balances glandular secretion, mucus level and cures backache. There is also profound
+          dimension to it. It is a way of adjusting human energy system to the celestial geometry,
+          so that you are in sync with the existence. It is being in sync with a nature on many
+          different levels.
+        </p>
+        <p>
+          <b>Surya Kriya includes several aspects that enrich one's life:</b>
+        </p>
+        <ul>
+          <li>Develops mental clarity and focus</li>
+          <li>Remedies weak constitutions</li>
+          <li>Boosts vigor and vitality</li>
+          <li>Balances hormonal levels in the body</li>
+          <li>Prepares one for deeper states of meditation</li>
+        </ul>
+        <iframe
+          style="aspect-ratio: 16 / 9"
+          width="100%"
+          src="https://www.youtube-nocookie.com/embed/_wq-OiPk-pU?si=KRkKxIfAchd3CvSj"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
 
     <footer class="footer footer-center bg-accent p-10 text-primary-content">
       <aside>
